# JNet

./: .gitignore  CMakeLists.txt  README.md
examples/: basic_example.cpp  cnn_example.cpp  epoch_training_example.cpp  mnist_cnn.cpp  optimizer_comparison.cpp  performance_benchmark.cpp  practical_cnn_example.cpp  simple_test.cpp  sine_regression.cpp  training_progress_demo.cpp
include/: jnet.h
src/core/: network.cpp  network.h  tensor.cpp  tensor.h  threadpool.cpp  threadpool.h
src/layers/: activation.cpp  activation.h  conv2d.cpp  conv2d.h  dense.cpp  dense.h  flatten.cpp  flatten.h  layer.h  pooling.cpp  pooling.h
src/optimizers/: adam.cpp  adam.h  optimizer.h  sgd.cpp  sgd.h
